--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
   <label><input type="radio" name="quiz12" value="v2"> 20</label><br>
   <label><input type="radio" name="quiz12" value="v3"> 80</label><br>
 -->
-<label><input type="radio" name="quiz12" value="v1"> 35분 35초 ></label></br>
-<label><input type="radio" name="quiz12" value="v2"> 45분 39초 <</label><br>
-<label><input type="radio" name="quiz12" value="v3"> 45분 20초 < </label><br>
+<label><input type="radio" name="quiz12" value="v1"> 35분 35초 </label></br>
+<label><input type="radio" name="quiz12" value="v2"> 45분 39초 </label><br>
+<label><input type="radio" name="quiz12" value="v3"> 45분 20초 </label><br>
  </font>
   <div id="checktrue12" style="margin:0px 0 0 0px; display:none;" >
    <img src="/BaroSeumQuiz34_3/images/checktrue.png"/>
@@ -145,9 +145,9 @@
   <label><input type="radio" name="quiz13" value="v2"> 20</label><br>
   <label><input type="radio" name="quiz13" value="v3"> 80</label><br>
 -->
-<label><input type="radio" name="quiz13" value="v1"> 4cm 10mm</label></br>
-<label><input type="radio" name="quiz13" value="v2"> 4cm 5mm</label><br>
-<label><input type="radio" name="quiz13" value="v3"> 5cm 5mm</label><br>
+<label><input type="radio" name="quiz13" value="v1"> 4cm 10mm </label></br>
+<label><input type="radio" name="quiz13" value="v2"> 4cm 5mm </label><br>
+<label><input type="radio" name="quiz13" value="v3"> 5cm 5mm </label><br>
  </font>
  <div id="checktrue13" style="margin:0px 0 0 0px; display:none;" >
    <img src="/BaroSeumQuiz34_3/images/checktrue.png"/>
@@ -490,7 +490,7 @@
    if(form11.quiz14.value=="20")
    if(form11.quiz14[1].checked==true)
    */
-   if(form11.quiz14[0].checked==true)){
+   if(form14.quiz14[0].checked==true)){
   checkresult_true(14);
    }else{
      wrongcheckcnt[3] = 1;
@@ -518,7 +518,7 @@
    if(form11.quiz16.value=="20")
    if(form11.quiz16[1].checked==true)
    */
-   if(form11.quiz16[2].checked==true){
+   if(form16.quiz16[2].checked==true){
   checkresult_true(16);
    }else{
      wrongcheckcnt[5] = 1;
