--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
    if(form11.quiz14.value=="20")
    if(form11.quiz14[1].checked==true)
    */
-   if(form14.quiz14[0].checked==true)){
+   if(form14.quiz14[0].checked==true){
   checkresult_true(14);
    }else{
      wrongcheckcnt[3] = 1;
